[package]
name = "lang"
version = "0.1.0"
authors = ["imkiva <imkiva@icloud.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = { version = "0.19.0", features = ["lexer"] }

[dependencies]
lazy_static = "1.4.0"
libc = "0.2.69"
lalrpop-util = "0.19.0"
regex = "1"

[lib]
crate-type = ["staticlib", "rlib"]
name = "mahiro_lang"
